hphp/hack/test/typecheck/like_types/dynamic_coercion/decl_types/tprim.php.like_types.exp
File "tprim.php", line 11, characters 3-15:
You cannot return a value (Typing[4084])
File "tprim.php", line 10, characters 19-22:
This is a void function
